--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "license": "ISC",
   "dependencies": {
     "@calcom/embed-react": "^1.5.3",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.16",
     "@types/node": "^24.9.1",
     "@types/react": "^19.2.2",
@@ -36,6 +40,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
-    "playwright": "^1.56.1"
+    "playwright": "^1.56.1",
+    "tw-animate-css": "^1.4.0"
   }
 }
